<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeSpot</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="run_Search">Go</string>
    <string name="address">address</string>
    <string name="warning">Find some crime</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_pub">PubActivity</string>
    <string name="action_settings">Settings</string>
    <string name="default_add">vanderbilt university</string>
    <string name="title_activity_spot_review">SpotReview</string>
    <string name="rate">RATE</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">UnSubscribe</string>
    <string name="publish">Send Warning</string>
    <string name="comment">Your comment</string>
    <string name="web">webView</string>
    <string name="historyAnalysis">historyAnalysis</string>
    <string name="showNearby">Nearby Crime</string>
    <string name="backToCur">Back</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="Heapmap">HeapMap</string>
    <string name="HeapmapWithWeight">HeapmapWithWeight</string>
    <string name="Map">Map</string>
    <string name="title_activity_history_analysis">HistoryAnalysisActivity</string>

</resources>