<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/webOption"
        android:showAsAction="never"
        android:title="@string/web"
        android:titleCondensed="@string/web">
    </item>
    <item
        android:id="@+id/showNearby"
        android:showAsAction="never"
        android:title="@string/showNearby"
        android:titleCondensed="@string/showNearby"/>
    <item
        android:id="@+id/backToCur"
        android:showAsAction="never"
        android:title="@string/backToCur"
        android:titleCondensed="@string/backToCur"/>
    <item
        android:id="@+id/pubOption"
        android:showAsAction="never"
        android:title="@string/publish"
        android:titleCondensed="@string/publish">
    </item>
    <item
        android:id="@+id/subOption"
        android:showAsAction="never"
        android:title="@string/subscribe"
        android:titleCondensed="@string/subscribe">
    </item>
    <item
        android:id="@+id/unsubOption"
        android:showAsAction="never"
        android:title="@string/unsubscribe"
        android:titleCondensed="@string/unsubscribe">
    </item>

</menu>